examples/errors/print_8-bit.avm
push int32(39)
print
